[gd_scene load_steps=3 format=3 uid="uid://r52dhllgoy16"]

[ext_resource type="Script" uid="uid://nnvthbsrn42m" path="res://main_lobby.gd" id="1_xe48q"]
[ext_resource type="Script" uid="uid://dm4wh0x4tmjue" path="res://Websocket/WebsocketClient.gd" id="2_tyd4p"]

[node name="MainLobby" type="Node2D"]
script = ExtResource("1_xe48q")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ChatContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Send
"

[node name="WebsocketScript" type="Node" parent="."]
script = ExtResource("2_tyd4p")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_send_pressed"]
[connection signal="connected_to_server" from="WebsocketScript" to="." method="_on_web_socket_client_connected_to_server"]
[connection signal="connection_closed" from="WebsocketScript" to="." method="_on_web_socket_client_connection_closed"]
[connection signal="message_received" from="WebsocketScript" to="." method="_on_web_socket_client_message_received"]
